# phosphor-pid-autotune

./: .clang-format  .clang-tidy  .gitignore  OWNERS  README.md  main.cpp  meson.build  phosphor-pid-autotune.bb  phosphor-pid-autotune.service  phosphor-pid-autotune.service.in  requirements.txt
.github/workflows/: release.yml
PID_tuning_methods/: imc.cpp  imc.hpp
buildjson/: buildjson.cpp  buildjson.hpp  config.cpp  config.hpp  json.hpp
configs/: autotune.json  sensorinfo.json
core/: dbus_io.cpp  dbus_io.hpp  logging.hpp  numeric.cpp  numeric.hpp  sensorinfo.cpp  sensorinfo.hpp  steady_state.cpp  steady_state.hpp  sysfs_io.cpp  sysfs_io.hpp  time_utils.cpp  time_utils.hpp  units.cpp  units.hpp  utils.cpp  utils.hpp
dbus/: constants.hpp  dbusconfiguration.cpp  dbusconfiguration.hpp
docs/: fopdt.md  steady_state.md
examples/: autotune.example.json  entitymanager.example.json  sensorinfo.example.json
experiment/: base_duty.cpp  base_duty.hpp  profile_noise.cpp  profile_noise.hpp  step_trigger.cpp  step_trigger.hpp
plot/: plot_data.cpp  plot_data.hpp  sim_data.txt
process_models/: fopdt.cpp  fopdt.hpp
solvers/: least_squares.hpp  nelder_mead.hpp
tool/: build_release.bat  build_release.sh  main.py  plot_curve.py
tool/app/: data_io.py  fopdt_algo.py  gui.py  pid_algo.py  plotting.py
